<resources>
    <string name="app_name">DietAppX</string>
    <string name="name">Ad</string>
    <string name="sex">Cinsiyet</string>
    <string name="height">Boy(cm)</string>
    <string name="weight">Kilo(kg)</string>
    <string name="age">Yaş</string>
    <string name="diyabet">Diyabet</string>
    <string name="vejeteryan">Vejeteryan</string>
    <string name="woman">Kadın</string>
    <string name="man">Erkek</string>

    <string name="title_activity_real_main">RealMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Egzersiz1">Nerdeyse hiç egzersiz yapmıyorum</string>
    <string name="Egzersiz2">Haftada 1 ya da 2 kez hafif egzersizler yapıyorum</string>
    <string name="Egzersiz3">Haftada 4-5 gün spor yapıyorum</string>
    <string name="Egzersiz4">Neredeyse haftanın her günü ağır idmanlarım var</string>
    <string name="Egzersiz5">Her gün çok çok ağır idmanlarım var</string>
    <string name="vegan">vegan</string>
    <string name="vejetaryen">vejetaryen</string>
    <string name="reflü">reflü</string>
    <string name="gastrit">gastrit</string>
    <string name="tansiyon">tansiyon</string>
    <string name="kolesterol">kolesterol</string>
    <string name="çölyak">çölyak</string>
    <string name="ülser">ülser</string>
    <string name="add">Kaydet</string>
    <string name="geri_al">Geri Al</string>
    <string name="food_eaten">Bügün yenilen yemekler:</string>

</resources>
