<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_diyet_secim"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bsc.gri.dietappx.DiyetSecimActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Uyguladığınız diyetleri seçiniz:"

                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioGroup
                android:id="@+id/rg1"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"

                >


                <CheckBox
                    android:id="@+id/vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/vegan" />

                <CheckBox
                    android:id="@+id/vejetaryen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="vejetaryen" />


                <CheckBox
                    android:id="@+id/reflü"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/reflü" />

                <CheckBox
                    android:id="@+id/kolesterol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/kolesterol" />

                <CheckBox
                    android:id="@+id/diyabet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/diyabet" />

                <CheckBox
                    android:id="@+id/gastrit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/gastrit" />

                <CheckBox
                    android:id="@+id/tansiyon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/tansiyon" />

                <CheckBox
                    android:id="@+id/çölyak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/çölyak" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rg1"
                android:layout_marginTop="16dp"
                android:text="Varsa, diyetinizden çıkarmak istediğiniz besinleri giriniz:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvd"
                android:ems="8"
                android:text="kjhgfds" />

            <TextView
                android:id="@+id/km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/autoCompleteTextView1"
                android:text="Günlük almayı hedeflediğim kalori miktarı"

                android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"

                android:inputType="textPersonName"
               android:layout_below="@+id/km"
                 />


        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
           android:text="kaydet"
            android:id="@+id/kaydetDiyetSecim"
            android:layout_gravity="right"

            />
    </LinearLayout>



</ScrollView>
